--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.13.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@nuxt/test-utils": "^3.0.0-rc.4",
     "@nuxt/test-utils-edge": "^3.0.0-rc.4-27599640.2db154f",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
@@ -30,8 +31,13 @@
     "vitest": "^0.13.1"
   },
   "dependencies": {
+    "@desmoslabs/desmjs": "4.0.0-alpha.1",
+    "@desmoslabs/desmjs-walletconnect": "^4.0.0-alpha.1",
     "@nuxtjs/composition-api": "^0.32.0",
     "@pinia/nuxt": "^0.1.9",
-    "pinia": "^2.0.14"
+    "buffer": "^6.0.3",
+    "pinia": "^2.0.14",
+    "qrcode.vue": "^3.3.3",
+    "stream-browserify": "^3.0.0"
   }
 }
