--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^3.13.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@keplr-wallet/types": "^0.10.9",
     "@nuxt/test-utils": "^3.0.0-rc.4",
     "@nuxt/test-utils-edge": "^3.0.0-rc.4-27599640.2db154f",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
@@ -31,7 +32,7 @@
     "vitest": "^0.13.1"
   },
   "dependencies": {
-    "@desmoslabs/desmjs": "4.0.0-alpha.1",
+    "@desmoslabs/desmjs": "4.0.0-alpha.2",
     "@desmoslabs/desmjs-walletconnect": "^4.0.0-alpha.1",
     "@nuxtjs/composition-api": "^0.32.0",
     "@pinia/nuxt": "^0.1.9",
