--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^3.13.0",
     "@milkdown/core": "^6.2.0",
+    "@milkdown/plugin-listener": "^6.2.0",
     "@milkdown/plugin-menu": "^6.2.0",
     "@milkdown/preset-commonmark": "^6.2.0",
     "@milkdown/preset-gfm": "^6.2.0",
