fix: style changes in reading and markdown editor

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@milkdown/core": "^6.2.0",
     "@milkdown/plugin-listener": "^6.2.0",
     "@milkdown/plugin-menu": "^6.2.0",
+    "@milkdown/plugin-tooltip": "^6.3.0",
     "@milkdown/preset-commonmark": "^6.2.0",
     "@milkdown/preset-gfm": "^6.2.0",
     "@milkdown/prose": "^6.2.0",
