feat: wallet integration (#3)
* deps: desmjs & walletconnect

* wip: DesmosApp walletconnect custom QR

* deps: keplr-types

* wip: keplr integration

* wip: walletconnect integration

* wip: auth guards

* deps: desmjs & walletconnect

* wip: DesmosApp walletconnect custom QR

* deps: keplr-types

* wip: keplr integration

* wip: walletconnect integration

* wip: auth guards

* fix: navbar routing

* wip: auth flow improvements

* wip: account & persistent storage

* wip: desmos-app auth

* deps: improved Buffer import

* wip: auth flow improvements

* lint: changed no-console rule to warn

* deps: update nuxt

* fix: mildown types path

--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "build": "nuxt build",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "mf-dev": "npx ts-node --esm ./scripts/miniflare-simulate.ts"
+    "mf-dev": "NODE_OPTIONS='--max-old-space-size=8192' npx ts-node --esm ./scripts/miniflare-simulate.ts"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.13.0",
+    "@cloudflare/workers-types": "^3.14.1",
+    "@desmoslabs/desmjs": "4.0.0-alpha.2",
+    "@desmoslabs/desmjs-types": "^4.0.0",
+    "@desmoslabs/desmjs-walletconnect": "^4.0.0-alpha.1",
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@keplr-wallet/types": "^0.10.12",
+    "@nuxt/test-utils": "^3.0.0-rc.6",
+    "@nuxt/test-utils-edge": "^3.0.0-rc.6-27635653.88f4525",
     "@milkdown/core": "^6.2.0",
     "@milkdown/plugin-listener": "^6.2.0",
     "@milkdown/plugin-menu": "^6.2.0",
@@ -19,28 +26,31 @@
     "@milkdown/preset-gfm": "^6.2.0",
     "@milkdown/prose": "^6.2.0",
     "@milkdown/vue": "^6.2.0",
-    "@nuxt/test-utils": "^3.0.0-rc.4",
-    "@nuxt/test-utils-edge": "^3.0.0-rc.4-27599640.2db154f",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
-    "@nuxtjs/tailwindcss": "^5.1.2",
-    "@tailwindcss/typography": "^0.5.2",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
+    "@nuxtjs/tailwindcss": "^5.3.0",
+    "@tailwindcss/typography": "^0.5.4",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "c8": "^7.11.3",
-    "eslint": "^8.16.0",
-    "eslint-plugin-vue": "^9.0.1",
-    "miniflare": "^2.5.1",
-    "nuxt": "3.0.0-rc.3",
-    "playwright": "^1.22.2",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.2",
+    "eslint": "^8.20.0",
+    "eslint-plugin-vue": "^9.2.0",
+    "miniflare": "^2.6.0",
+    "nuxt": "^3.0.0-rc.6",
+    "playwright": "^1.23.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4",
     "vite-plugin-eslint": "^1.6.1",
     "vitest": "^0.13.1"
   },
   "dependencies": {
     "@milkdown/theme-nord": "^6.2.0",
-    "@nuxtjs/composition-api": "^0.32.0",
-    "@pinia/nuxt": "^0.1.9",
-    "pinia": "^2.0.14"
+    "@nuxtjs/composition-api": "^0.33.0",
+    "@pinia/nuxt": "^0.3.0",
+    "buffer": "^6.0.3",
+    "bufferutil": "^4.0.6",
+    "pinia": "^2.0.16",
+    "qrcode.vue": "^3.3.3",
+    "stream-browserify": "^3.0.0",
+    "utf-8-validate": "^5.0.9"
   }
 }
