--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
     "@desmoslabs/desmjs-walletconnect": "^4.0.0-alpha.1",
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@keplr-wallet/types": "^0.10.12",
-    "@nuxt/test-utils": "^3.0.0-rc.6",
-    "@nuxt/test-utils-edge": "^3.0.0-rc.6-27635653.88f4525",
     "@milkdown/core": "^6.2.0",
+    "@milkdown/plugin-block": "^6.3.0",
+    "@milkdown/plugin-diagram": "^6.3.0",
+    "@milkdown/plugin-emoji": "^6.3.0",
     "@milkdown/plugin-listener": "^6.2.0",
+    "@milkdown/plugin-math": "^6.3.0",
     "@milkdown/plugin-menu": "^6.2.0",
     "@milkdown/plugin-tooltip": "^6.3.0",
+    "@milkdown/plugin-upload": "^6.3.0",
     "@milkdown/preset-commonmark": "^6.2.0",
     "@milkdown/preset-gfm": "^6.2.0",
     "@milkdown/prose": "^6.2.0",
+    "@milkdown/theme-pack-helper": "^6.3.0",
     "@milkdown/vue": "^6.2.0",
+    "@nuxt/test-utils": "^3.0.0-rc.6",
+    "@nuxt/test-utils-edge": "^3.0.0-rc.6-27635653.88f4525",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/tailwindcss": "^5.3.0",
     "@tailwindcss/typography": "^0.5.4",
@@ -34,6 +40,7 @@
     "c8": "^7.11.3",
     "eslint": "^8.20.0",
     "eslint-plugin-vue": "^9.2.0",
+    "katex": "^0.16.0",
     "miniflare": "^2.6.0",
     "nuxt": "^3.0.0-rc.6",
     "playwright": "^1.23.4",
@@ -43,7 +50,6 @@
     "vitest": "^0.13.1"
   },
   "dependencies": {
-    "@milkdown/theme-nord": "^6.2.0",
     "@nuxtjs/composition-api": "^0.33.0",
     "@pinia/nuxt": "^0.3.0",
     "buffer": "^6.0.3",
