--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "pinia": "^2.0.16",
     "qrcode.vue": "^3.3.3",
     "stream-browserify": "^3.0.0",
+    "unique-username-generator": "^1.1.1",
     "utf-8-validate": "^5.0.9",
     "uuid": "^8.3.2"
   }
