deps: update + ipfs

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.14.1",
-    "@desmoslabs/desmjs": "4.0.0-alpha.2",
-    "@desmoslabs/desmjs-types": "^4.0.0",
-    "@desmoslabs/desmjs-walletconnect": "^4.0.0-alpha.1",
+    "@desmoslabs/desmjs": "4.1.0",
+    "@desmoslabs/desmjs-types": "^4.1.0",
+    "@desmoslabs/desmjs-walletconnect": "^4.1.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@keplr-wallet/types": "^0.10.12",
     "@milkdown/core": "^6.2.0",
@@ -41,6 +41,7 @@
     "cosmjs-types": "^0.5.0",
     "eslint": "^8.20.0",
     "eslint-plugin-vue": "^9.2.0",
+    "ipfs-http-client": "^57.0.3",
     "katex": "^0.16.0",
     "miniflare": "^2.6.0",
     "nuxt": "^3.0.0-rc.6",
