--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "vitest": "^0.13.1"
   },
   "dependencies": {
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@nuxtjs/composition-api": "^0.33.0",
     "@pinia/nuxt": "^0.3.0",
+    "@rollup/plugin-inject": "^4.0.4",
     "buffer": "^6.0.3",
     "bufferutil": "^4.0.6",
     "pinia": "^2.0.16",
