--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "miniflare": "^2.6.0",
     "nuxt": "^3.0.0-rc.6",
     "playwright": "^1.23.4",
+    "prosemirror-model": "^1.18.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "vite-plugin-eslint": "^1.6.1",
