--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@desmoslabs/desmjs-walletconnect": "^4.3.2",
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@ezone-devops/milkdown-plugin-directive-fallback": "^6.2.2",
-    "@keplr-wallet/types": "^0.10.12",
+    "@keplr-wallet/types": "0.10.19",
     "@milkdown/core": "^6.3.2",
     "@milkdown/plugin-block": "^6.3.2",
     "@milkdown/plugin-diagram": "^6.3.2",
