--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "ipfs-http-client": "^57.0.3",
     "katex": "^0.16.0",
     "miniflare": "^2.6.0",
-    "nuxt": "npm:nuxt3@3.0.0-rc.9-27699566.0339a23",
+    "nuxt": "^3.0.0-rc.9",
     "playwright": "^1.23.4",
     "prosemirror-model": "^1.18.1",
     "remark-directive": "^2.0.1",
