--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@desmoslabs/desmjs-types": "^4.3.5",
     "@desmoslabs/desmjs-walletconnect": "^4.3.5",
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@ezone-devops/milkdown-plugin-directive-fallback": "^6.2.2",
     "@keplr-wallet/types": "0.10.19",
     "@milkdown/core": "^6.3.2",
@@ -50,6 +51,7 @@
     "nuxt": "^3.0.0-rc.9",
     "playwright": "^1.23.4",
     "prosemirror-model": "^1.18.1",
+    "protobufjs": "^7.1.0",
     "remark-directive": "^2.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
