--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-node_modules/*
-!node_modules/@desmoslabs/
-
-node_modules/@desmoslabs/*
-!node_modules/@desmoslabs/desmjs-keplr
-
-node_modules/@desmoslabs/desmjs-keplr/node_modules/
-
+node_modules
 *.log*
 .nuxt
 .nitro
