--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "scripta",
   "private": true,
-  "main": "./output/server/index.mjs",
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
@@ -34,8 +33,8 @@
     "@milkdown/prose": "^6.3.2",
     "@milkdown/theme-pack-helper": "^6.3.2",
     "@milkdown/vue": "^6.3.2",
-    "@nuxt/test-utils": "^3.0.0-rc.6",
-    "@nuxt/test-utils-edge": "^3.0.0-rc.6-27635653.88f4525",
+    "@nuxt/test-utils": "^3.0.0-rc.10",
+    "@nuxt/test-utils-edge": "^3.0.0-rc.10",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/tailwindcss": "^5.3.0",
     "@tailwindcss/typography": "^0.5.4",
@@ -48,7 +47,7 @@
     "ipfs-http-client": "^57.0.3",
     "katex": "^0.16.0",
     "miniflare": "^2.6.0",
-    "nuxt": "^3.0.0-rc.9",
+    "nuxt": "npm:nuxt3@latest",
     "playwright": "^1.23.4",
     "prosemirror-model": "^1.18.1",
     "protobufjs": "^7.1.0",
