--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "coverage": "vitest run --coverage",
     "mf-dev": "NODE_OPTIONS='--max-old-space-size=8192' npx ts-node --esm ./scripts/miniflare-simulate.ts",
     "mf-build": "NODE_OPTIONS='--max-old-space-size=8192' NITRO_PRESET=cloudflare yarn build",
-    "mf-publish": "wrangler publish --site ./.output/public"
+    "mf-publish": "wrangler publish --site ./.output/public",
+    "pages-build": "NODE_OPTIONS='--max-old-space-size=8192' NITRO_PRESET=cloudflare_pages yarn build",
+    "pages-publish": "npx wrangler pages publish .output/public",
+    "pages-dev": "npx wrangler pages dev .output/public -k KV_TESTNET_TRENDING_POSTS --port 8789"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.14.1",
+    "@cloudflare/workers-types": "^3.16.0",
     "@desmoslabs/desmjs": "^4.3.10",
     "@desmoslabs/desmjs-keplr": "^4.3.10",
     "@desmoslabs/desmjs-types": "^4.3.10",
