deps: Nuxt3 rc.12 & DesmJS 4.6.1

--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.16.0",
-    "@desmoslabs/desmjs": "^4.3.10",
-    "@desmoslabs/desmjs-keplr": "^4.3.10",
-    "@desmoslabs/desmjs-types": "^4.3.10",
-    "@desmoslabs/desmjs-walletconnect": "^4.3.8",
+    "@desmoslabs/desmjs": "4.6.1",
+    "@desmoslabs/desmjs-keplr": "4.6.1",
+    "@desmoslabs/desmjs-types": "4.6.1",
+    "@desmoslabs/desmjs-walletconnect": "4.6.1",
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
     "@ezone-devops/milkdown-plugin-directive-fallback": "^6.2.2",
     "@keplr-wallet/types": "0.10.19",
@@ -36,8 +36,8 @@
     "@milkdown/prose": "^6.3.2",
     "@milkdown/theme-pack-helper": "^6.3.2",
     "@milkdown/vue": "^6.3.2",
-    "@nuxt/test-utils": "^3.0.0-rc.10",
-    "@nuxt/test-utils-edge": "^3.0.0-rc.10",
+    "@nuxt/test-utils": "^3.0.0-rc.12",
+    "@nuxt/test-utils-edge": "^3.0.0-rc.12",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/tailwindcss": "^5.3.0",
     "@tailwindcss/typography": "^0.5.4",
@@ -50,7 +50,7 @@
     "ipfs-http-client": "^57.0.3",
     "katex": "^0.16.0",
     "miniflare": "^2.6.0",
-    "nuxt": "npm:nuxt3@latest",
+    "nuxt": "3.0.0-rc.12",
     "playwright": "^1.23.4",
     "prosemirror-model": "^1.18.1",
     "protobufjs": "^7.1.0",
