--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@milkdown/vue": "^6.3.2",
     "@nuxt/test-utils": "^3.0.0-rc.12",
     "@nuxt/test-utils-edge": "^3.0.0-rc.12",
+    "@nuxtjs/device": "^3.0.0",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/tailwindcss": "^5.3.0",
     "@tailwindcss/typography": "^0.5.4",
