--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "@milkdown/prose": "^6.3.2",
     "@milkdown/theme-pack-helper": "^6.3.2",
     "@milkdown/vue": "^6.3.2",
-    "@nuxt/test-utils": "^3.0.0-rc.12",
+    "@nuxt/test-utils": "^3.0.0",
     "@nuxt/test-utils-edge": "^3.0.0-rc.12",
     "@nuxtjs/device": "^3.0.0",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
-    "@nuxtjs/tailwindcss": "^5.3.0",
-    "@tailwindcss/typography": "^0.5.4",
+    "@nuxtjs/tailwindcss": "6.1.3",
+    "@tailwindcss/typography": "0.5.8",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "c8": "^7.11.3",
@@ -51,7 +51,7 @@
     "ipfs-http-client": "^57.0.3",
     "katex": "^0.16.0",
     "miniflare": "^2.6.0",
-    "nuxt": "3.0.0-rc.12",
+    "nuxt": "3.0.0",
     "playwright": "^1.23.4",
     "prosemirror-model": "^1.18.1",
     "protobufjs": "^7.1.0",
