--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "ipfs-http-client": "^57.0.3",
     "katex": "^0.16.0",
     "miniflare": "^2.6.0",
-    "nuxt": "3.0.0",
+    "nuxt": "npm:nuxt3@3.0.1-rc.0-27828744.aa9aec1",
     "playwright": "^1.23.4",
     "prosemirror-model": "^1.18.1",
     "protobufjs": "^7.1.0",
