--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "scripta",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt dev",
+    "dev": "yarn run current-git-sha nuxt dev",
     "build": "nuxt build",
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "pages-build": "NODE_OPTIONS='--max-old-space-size=8192' NITRO_PRESET=cloudflare_pages yarn build",
-    "pages-publish": "npx wrangler pages publish .output/public",
+    "current-git-sha": "NUXT_CURRENT_GIT_SHA=`git rev-parse --short HEAD`",
+    "pages-build": " yarn run current-git-sha; NODE_OPTIONS='--max-old-space-size=8192' NITRO_PRESET=cloudflare_pages yarn build",
+    "pages-publish": "rm -R ./node_modules/.cache/wrangler/;npx wrangler pages publish .output/public",
     "pages-dev": "npx wrangler pages dev .output/public -k KV_TESTNET_TRENDING_POSTS --port 8789"
   },
   "devDependencies": {
