--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "@nuxtjs/device": "^3.0.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "6.1.3",
-    "@walletconnect/types": "^2.2.1",
     "@tailwindcss/typography": "0.5.8",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
+    "@walletconnect/types": "^2.2.1",
     "c8": "^7.11.3",
     "cosmjs-types": "^0.5.1",
     "eslint": "^8.20.0",
@@ -63,6 +63,8 @@
     "vitest": "^0.13.1"
   },
   "dependencies": {
+    "@cosmjs/ledger-amino": "^0.29.5",
+    "@ledgerhq/hw-transport-webhid": "^6.27.11",
     "@milkdown/plugin-history": "^6.5.4",
     "@nuxtjs/composition-api": "^0.33.1",
     "@pinia/nuxt": "^0.4.1",
