--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "6.1.3",
     "@tailwindcss/typography": "0.5.8",
+    "@types/rollup-plugin-node-builtins": "^2.1.2",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
     "c8": "^7.11.3",
