--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.16.0",
-    "@desmoslabs/desmjs": "6.0.1",
-    "@desmoslabs/desmjs-keplr": "6.0.1",
-    "@desmoslabs/desmjs-types": "6.0.1",
+    "@desmoslabs/desmjs": "6.0.3",
+    "@desmoslabs/desmjs-keplr": "6.0.3",
+    "@desmoslabs/desmjs-types": "6.0.3",
     "@desmoslabs/desmjs-walletconnect-v2": "6.0.1",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
@@ -77,6 +77,7 @@
     "browser": "^0.2.6",
     "buffer": "^6.0.3",
     "bufferutil": "^4.0.6",
+    "esbuild-plugin-polyfill-node": "^0.3.0",
     "events": "^3.3.0",
     "pinia": "^2.0.21",
     "qrcode.vue": "^3.3.3",
@@ -85,5 +86,6 @@
     "utf-8-validate": "^5.0.9",
     "util": "^0.12.4",
     "uuid": "^8.3.2"
-  }
+  },
+  "packageManager": "yarn@4.1.0"
 }
